--- a/05.Box-Model_and_Position-Lab/04_Property-Margin/styles.css
+++ b/05.Box-Model_and_Position-Lab/04_Property-Margin/styles.css
@@ -5,8 +5,5 @@ div {
 p {
   font-weight: bold;
   background-color: coral;
-  margin-left: 20px;
-  margin-top: 30px;
-  margin-right: 40px;
-  margin-bottom: 50px;
+  margin: 30px 40px 50px 20px;
 }
